--- a/views/menu.hbs
+++ b/views/menu.hbs
@@ -88,7 +88,7 @@
 
                 <div class="col-lg-6 col-sm-12">
                     <div class="wow fadeInUp about-image" data-wow-delay="0.6s">
-                        <img src="images/menuimage.png" class="img-responsive" alt="">
+                        <img src="images/menuimage.png" class="img-responsive" alt="Menu Preview">
                     </div>
                 </div>
 
@@ -104,7 +104,7 @@
                     <div class="row no-gutters d-flex align-items-stretch">
                         <div class="col-md-12 col-lg-12">
                             <div class="heading-menu text-left ">
-                                <h3>APPETIZERS</h3>
+                                <h1>APPETIZERS</h1>
                             </div>
                         </div>
                     </div>
@@ -333,7 +333,7 @@
                     <div class="row no-gutters d-flex align-items-stretch">
                         <div class="col-md-12 col-lg-12">
                             <div class="heading-menu text-left ">
-                                <h3>CHAT</h3>
+                                <h1>CHAT</h1>
                             </div>
                         </div>
                     </div>
@@ -396,7 +396,7 @@
                     <div class="row no-gutters d-flex align-items-stretch">
                         <div class="col-md-12 col-lg-12">
                             <div class="heading-menu text-left ">
-                                <h3>SOUP AND SALAD</h3>
+                                <h1>SOUP AND SALAD</h1>
                             </div>
                         </div>
                     </div>
@@ -531,7 +531,7 @@
                     <div class="row no-gutters d-flex align-items-stretch">
                         <div class="col-md-12 col-lg-12">
                             <div class="heading-menu text-left ">
-                                <h3>BREADS</h3>
+                                <h1>BREADS</h1>
                             </div>
                         </div>
                     </div>
@@ -695,7 +695,7 @@
                     <div class="row no-gutters d-flex align-items-stretch">
                         <div class="col-md-12 col-lg-12">
                             <div class="heading-menu text-left ">
-                                <h3>KABAB CORNER</h3>
+                                <h1>KABAB CORNER</h1>
                                 <p><span>Tandoori dishes are cooked in clay oven (Tandoor) and served on sizzler.
                                     </span>
                                 </p>
@@ -862,7 +862,7 @@
                     <div class="row no-gutters d-flex align-items-stretch">
                         <div class="col-md-12 col-lg-12">
                             <div class="heading-menu text-left ">
-                                <h3>Indian – vegetArian</h3>
+                                <h1>Indian – vegetArian</h1>
                                 <p><span>Served with steamed basmati rice
                                     </span>
                                 </p>
@@ -1139,7 +1139,7 @@
                     <div class="row no-gutters d-flex align-items-stretch">
                         <div class="col-md-12 col-lg-12">
                             <div class="heading-menu text-left ">
-                                <h3>INDIAN N0N - VEGETARIAN</h3>
+                                <h1>INDIAN N0N - VEGETARIAN</h1>
                                 <p><span>Served with steamed basmati rice
                                     </span>
                                 </p>
@@ -1447,7 +1447,7 @@
                     <div class="row no-gutters d-flex align-items-stretch">
                         <div class="col-md-12 col-lg-16">
                             <div class="heading-menu text-left ">
-                                <h3>THAI ENTREES</h3>
+                                <h1>THAI ENTREES</h1>
                                 <p><span>Served with steamed jasmine rice </span>
                                 </p>
                                 <p><span>CHICKEN, VEGETABLE OR TOFU -<Strong> $13.95</Strong></span></p>
@@ -1549,7 +1549,7 @@
                     <div class="row no-gutters d-flex align-items-stretch">
                         <div class="col-md-12 col-lg-12">
                             <div class="heading-menu text-left">
-                                <h3>NOODLES</h3>
+                                <h1>NOODLES</h1>
                                 <p><span>Each item can be ordered with Chicken, Pork, Vegetables or Shrimp</span>
                                 </p>
                                 <p><span>CHICKEN, VEGETABLE OR TOFU -<Strong> $13.95</Strong></span></p>
@@ -1642,7 +1642,7 @@
                     <div class="row no-gutters d-flex align-items-stretch">
                         <div class="col-md-12 col-lg-12">
                             <div class="heading-menu text-left ">
-                                <h3>Thai FRIED RICE</h3>
+                                <h1>Thai FRIED RICE</h1>
                                 <p><span>Each item can be ordered with Chicken, Pork, Vegetables or Shrimp</span>
                                 </p>
                                 <p><span>CHICKEN, VEGETABLE OR TOFU - <Strong> $13.95</Strong></span></p>
@@ -1720,7 +1720,7 @@
                     <div class="row no-gutters d-flex align-items-stretch">
                         <div class="col-md-12 col-lg-12">
                             <div class="heading-menu text-left ">
-                                <h3>SPECIAL INTEREST</h3>
+                                <h1>SPECIAL INTEREST</h1>
                             </div>
                         </div>
                     </div>
@@ -1816,7 +1816,7 @@
                     <div class="row no-gutters d-flex align-items-stretch">
                         <div class="col-md-12 col-lg-12">
                             <div class="heading-menu text-left ">
-                                <h3>SIDES</h3>
+                                <h1>SIDES</h1>
                             </div>
                         </div>
                     </div>
@@ -1901,7 +1901,7 @@
                     <div class="row no-gutters d-flex align-items-stretch">
                         <div class="col-md-12 col-lg-12">
                             <div class="heading-menu text-left ">
-                                <h3>Kids Menu</h3>
+                                <h1>Kids Menu</h1>
                             </div>
                         </div>
                     </div>
@@ -1957,7 +1957,7 @@
                     <div class="row no-gutters d-flex align-items-stretch">
                         <div class="col-md-12 col-lg-12">
                             <div class="heading-menu text-left ">
-                                <h3>DESSERT &amp; DRINKS</h3>
+                                <h1>DESSERT &amp; DRINKS</h1>
                             </div>
                         </div>
                     </div>
@@ -2054,7 +2054,7 @@
                     <div class="row no-gutters d-flex align-items-stretch">
                         <div class="col-md-12 col-lg-12">
                             <div class="heading-menu text-left ">
-                                <h3>LUNCH SPECIAL</h3>
+                                <h1>LUNCH SPECIAL</h1>
                                 <p><span>Available until 3:00 PM (DINE IN ONLY)</span>
                             </div>
                         </div>
@@ -2063,7 +2063,7 @@
                         <div class="row no-gutters d-flex align-items-stretch">
                             <div class="col-md-12 col-lg-12">
                                 <div class="sub-heading-menu text-left ">
-                                    <h3>Vegetarian Entree</h3>
+                                    <h2>Vegetarian Entree</h2>
                                 </div>
                             </div>
                             <div class="col-md-6 col-lg-6 menu-wrap">
@@ -2257,7 +2257,7 @@
                         <div class="row no-gutters d-flex align-items-stretch">
                             <div class="col-md-12 col-lg-12">
                                 <div class="sub-heading-menu text-left ">
-                                    <h3>Non - vegetarian Entree</h3>
+                                    <h2>Non - vegetarian Entree</h2>
                                 </div>
                             </div>
                             <div class="col-md-6 col-lg-6 menu-wrap">
@@ -2559,7 +2559,7 @@
                         <div class="row no-gutters d-flex align-items-stretch">
                             <div class="col-md-12 col-lg-12">
                                 <div class="sub-heading-menu text-left ">
-                                    <h4>THAI LUNCH</h4>
+                                    <h2>THAI LUNCH</h2>
                                     <p><span>Served with steamed rice and complementary spring roll</span>
                                     </p>
                                     <p><span>CHICKEN, VEGETABLE OR TOFU - <Strong> $9.95</Strong></span></p>
