--- a/views/partials/head.hbs
+++ b/views/partials/head.hbs
@@ -1,34 +1,47 @@
 <meta charset="UTF-8">
-     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-     <meta name="description" content="">
-     <meta name="keywords" content="">
-     <meta name="author" content="">
-     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
-    <link rel='shortcut icon' type='image/x-icon' href='images/favicon.ico' />
-    <title>Curry and Noodle</title>
+<meta http-equiv="X-UA-Compatible" content="IE=Edge">
 
-    <!-- GOOGLE FONTS CSS -->
-    <link href="https://fonts.googleapis.com/css?family=Great+Vibes|Poppins:400,500,600,700,800&amp;display=swap"
-        rel="stylesheet">
+<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
 
-    <!-- FONTAWESOME CSS -->
-    <link href="fontawesome/css/all.min.css" rel="stylesheet" />
+<meta name="description" content="Curry & Noodle brings you the best in Indian, Thai & Nepalese dishes, 
+prepared with sumptuous taste & accompanied by our own house blends of sauces & spices">
 
-    <!-- BOOTSTRAP CSS -->
-    <link rel="stylesheet" href="css/vendors/bootstrap.min.css">
+<meta name="keywords" content="Curry and Noodle, Lunch Special, 
+Takeout, Reservation, Naan, Paratha, Chicken Tandoori,
+ Winston Salem, Crispy spring roll, Chicken Mo: Mo:, Edamame, Chilli Chicken,
+ Gobi Manchurian, Samosa Chat, Mulligatwani Soup, Thukpa Soup, Chicken Tikka,
+ Paneer Tikka, Kabab, Palak Paneer, Aloo Palak, Mushroom Shabnam, Vindaloo,
+ Roasted garlic & vegetables, Eggplant Holy Basil, Thai Curry,
+ Drunk man noodles, Spicy Ramen, Kashmiri Rogan Josh, Biryani, Pickle, Chutni,
+ Badami Kheer, Thai Dragon Noodles
+">
 
-    <!-- ALERTIFY CSS -->
-     <link rel="stylesheet" href="css/vendors/alertify.min.css">
+<link rel='shortcut icon' type='image/ico' href='images/favicon.ico' />
 
-    <!-- SLICK FOR SLIDER CSS -->
-    <link rel="stylesheet" href="css/vendors/slick.css">
-    <link rel="stylesheet" href="css/vendors/slick-theme.css">
+<title>Curry and Noodle - Fine Indian &amp; Thai Cuisine</title>
 
-    <!-- BOOTSTRAP DATETIME PICKER CSS -->
-    <link href="datetimepicker/css/tempusdominus-bootstrap-4.css" rel="stylesheet">
+<!-- GOOGLE FONTS CSS -->
+<link href="https://fonts.googleapis.com/css?family=Great+Vibes|Poppins:400,500,600,700,800&amp;display=swap"
+    rel="stylesheet">
 
-    <!-- MAIN CSS -->
-    <link rel="stylesheet" href="css/main/style.css">
+<!-- FONTAWESOME CSS -->
+<link href="fontawesome/css/all.min.css" rel="stylesheet" />
 
-    <!-- RESPONSIVE CSS -->
-    <link rel="stylesheet" href="css/responsive/responsive.css">
+<!-- BOOTSTRAP CSS -->
+<link rel="stylesheet" href="css/vendors/bootstrap.min.css">
+
+<!-- ALERTIFY CSS -->
+<link rel="stylesheet" href="css/vendors/alertify.min.css">
+
+<!-- SLICK FOR SLIDER CSS -->
+<link rel="stylesheet" href="css/vendors/slick.css">
+<link rel="stylesheet" href="css/vendors/slick-theme.css">
+
+<!-- BOOTSTRAP DATETIME PICKER CSS -->
+<link href="datetimepicker/css/tempusdominus-bootstrap-4.css" rel="stylesheet">
+
+<!-- MAIN CSS -->
+<link rel="stylesheet" href="css/main/style.css">
+
+<!-- RESPONSIVE CSS -->
+<link rel="stylesheet" href="css/responsive/responsive.css">
