--- a/views/home.hbs
+++ b/views/home.hbs
@@ -268,7 +268,7 @@
                         <img src="images/map1.png" alt="Map with multiple pins">
                         <h2>TakeOut</h2>
                         <p class="tm-feature-description">Bring Curry &amp; Noodle to your doorstep. We offer
-                             delivery services and takeout!</p>
+                            delivery services and takeout!</p>
                     </div>
                 </div>
             </div>
@@ -306,8 +306,8 @@
 
                             <div class="input-group">
 
-                                <input type="text" name="guests" class="form-control" autocomplete="off" placeholder="No. of Persons"
-                                     />
+                                <input type="text" name="guests" class="form-control" autocomplete="off"
+                                    placeholder="No. of Persons" />
 
                                 <div class="input-group-append">
 
@@ -361,7 +361,8 @@
 
                             <div class="input-group">
 
-                                <input type="text" name="name" class="form-control" autocomplete="off" placeholder="Your Name" />
+                                <input type="text" name="name" class="form-control" autocomplete="off"
+                                    placeholder="Your Name" />
 
                                 <div class="input-group-append">
 
@@ -394,7 +395,8 @@
 
                             <div class="input-group">
 
-                                <input type="text" name="email" class="form-control" autocomplete="off" placeholder="Your Email" />
+                                <input type="text" name="email" class="form-control" autocomplete="off"
+                                    placeholder="Your Email" />
 
                                 <div class="input-group-append">
 
@@ -412,7 +414,8 @@
 
                                 <span class="input-group-btn">
 
-                                    <button class="btn subbtn" id="reservation-sumbit" type="submit">Make a Reservation</button>
+                                    <button class="btn subbtn" id="reservation-sumbit" type="submit">Make a
+                                        Reservation</button>
 
                                 </span>
 
@@ -437,9 +440,19 @@
         <div class="container">
             <div class="row">
 
+                <div class="col col-12 col-sm-12 col-md-12 col-lg-6 order-2 d-lg-none d-xl-none col-left">
 
 
-                <div class="col col-12 col-sm-12 col-md-12 col-lg-6 col-left">
+
+                </div>
+
+                <div class="col col-12 col-sm-12 col-md-12 col-lg-6 d-none d-lg-block col-left">
+
+
+
+                </div>
+
+                <div class="col col-12 col-sm-12 col-md-12 col-lg-6 col-right">
 
                     <div class="content">
 
@@ -479,7 +492,7 @@
 
                         <div class="hours">
                             <p>11:00 AM to 09:30 PM</p>
-                            <p>Monday, Wednesday &amp; Thursday</p>
+                            <p>Monday to Thursday</p>
                         </div>
 
                         <div class="hours">
@@ -494,17 +507,7 @@
                     </div>
 
                 </div>
-                <div class="col col-12 col-sm-12 col-md-12 col-lg-6 order-2 d-lg-none d-xl-none col-right">
 
-
-
-                </div>
-
-                <div class="col col-12 col-sm-12 col-md-12 col-lg-6 d-none d-lg-block col-right">
-
-
-
-                </div>
 
             </div>
 
